--- a/Maui/SimpleWeather.Maui/Controls/Banner/BannerContent.xaml
+++ b/Maui/SimpleWeather.Maui/Controls/Banner/BannerContent.xaml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView
     x:Class="SimpleWeather.Maui.Controls.BannerContent"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -41,7 +41,7 @@
                 <Button
                     x:Name="SecondaryButton"
                     Margin="8,0"
-                    IsVisible="false" />
+                    IsVisible="False" />
             </HorizontalStackLayout>
         </Grid>
     </Frame>
