--- a/Maui/SimpleWeather.Maui/Controls/Graphs/Views/ForecastGraphPanel.xaml
+++ b/Maui/SimpleWeather.Maui/Controls/Graphs/Views/ForecastGraphPanel.xaml
@@ -14,13 +14,13 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
-        <Button
+        <ImageButton
             x:Name="LeftButton"
             Grid.Column="0"
             Clicked="LeftButton_Click"
             IsEnabled="{x:Bind CanScrollToStart, Mode=OneWay}"
             Style="{DynamicResource LeftArrowButton}" />
-        <Button
+        <ImageButton
             x:Name="RightButton"
             Grid.Column="2"
             Clicked="RightButton_Click"
@@ -29,6 +29,7 @@
         <graphs:LineView
             x:Name="LineGraphView"
             Grid.Column="1"
+            BottomTextColor="{AppThemeBinding Light=Black, Dark=White}"
             DrawDataLabels="True"
             DrawDotLine="False"
             DrawDotPoints="False"
@@ -39,6 +40,7 @@
             FontSize="{OnIdiom Phone=13,
                                Default=15}"
             HeightRequest="275"
+            HorizontalOptions="FillAndExpand"
             ItemWidthChanged="GraphView_ItemWidthChanged"
             Loaded="GraphView_Loaded"
             ViewChanged="GraphView_ViewChanged">
