--- a/Maui/SimpleWeather.Maui/Preferences/DevSettingsPage.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/DevSettingsPage.xaml
@@ -8,7 +8,7 @@
     xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
     xmlns:weather="clr-namespace:SimpleWeather.WeatherData;assembly=SimpleWeather.Shared">
     <Grid>
-        <ScrollView Padding="16,0" HorizontalScrollBarVisibility="Never">
+        <ScrollView Orientation="Vertical" Padding="16,0" HorizontalScrollBarVisibility="Never">
             <VerticalStackLayout>
                 <Label Style="{StaticResource SettingTitleStyle}" Text="Developer Settings" />
                 <Label
