--- a/Maui/SimpleWeather.Maui/Preferences/Settings_Credits.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/Settings_Credits.xaml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
     x:Class="SimpleWeather.Maui.Preferences.Settings_Credits"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -6,7 +6,7 @@
     xmlns:controls="clr-namespace:SimpleWeather.Maui.Controls"
     xmlns:matIcons="clr-namespace:SimpleWeather.Maui.MaterialIcons"
     xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared">
-    <ScrollView Padding="16,0" HorizontalScrollBarVisibility="Never">
+    <ScrollView Orientation="Vertical" Padding="16,0" HorizontalScrollBarVisibility="Never">
         <Grid>
             <VerticalStackLayout>
                 <Label Style="{DynamicResource SettingTitleStyle}" Text="{x:Static res_strings:Resources.pref_category_providers}" />
