--- a/Maui/SimpleWeather.Maui/Preferences/Settings_Features.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/Settings_Features.xaml
@@ -6,7 +6,7 @@
     xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
     xmlns:uwpUtils="clr-namespace:SimpleWeather.NET.Utils">
     <Grid>
-        <ScrollView Padding="16,0" HorizontalScrollBarVisibility="Never">
+        <ScrollView Orientation="Vertical" Padding="16,0" HorizontalScrollBarVisibility="Never">
             <VerticalStackLayout>
                 <Label Style="{DynamicResource SettingsTitleStyle}" Text="{x:Static res_strings:Resources.pref_title_features}" />
                 <Label
