--- a/Maui/SimpleWeather.Maui/Preferences/Settings_Icons.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/Settings_Icons.xaml
@@ -13,7 +13,7 @@
     Shell.NavBarIsVisible="True">
 
     <Grid>
-        <ScrollView Padding="16,0" HorizontalScrollBarVisibility="Never">
+        <ScrollView Orientation="Vertical" Padding="16,0" HorizontalScrollBarVisibility="Never">
             <VerticalStackLayout x:Name="IconRadioContainer" />
         </ScrollView>
     </Grid>
