--- a/Maui/SimpleWeather.Maui/Preferences/Settings_OSSLibs.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/Settings_OSSLibs.xaml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
     x:Class="SimpleWeather.Maui.Preferences.Settings_OSSLibs"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Title="Settings_OSSLibs">
-    <ScrollView>
+    <ScrollView Orientation="Vertical">
         <VerticalStackLayout>
             <Label Padding="16,8" TextType="Html">
                 <![CDATA[
