--- a/Maui/SimpleWeather.Maui/Main/WeatherNow.xaml
+++ b/Maui/SimpleWeather.Maui/Main/WeatherNow.xaml
@@ -63,237 +63,7 @@
             Refreshing="RefreshBtn_Clicked"
             SizeChanged="MainViewer_SizeChanged">
             <ScrollView x:Name="MainViewer" Orientation="Vertical">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-                    <VerticalStackLayout x:Name="ConditionPanelLayout"
-                                         Grid.Row="0">
-                        <Grid
-                            Grid.Row="0"
-                            Margin="5,10,5,5"
-                            VerticalOptions="Center">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="*" />
-                            </Grid.ColumnDefinitions>
-                            <Border
-                                x:Name="GPSIcon"
-                                Grid.Column="0"
-                                Margin="16,0"
-                                IsVisible="{Binding UiState.IsGPSLocation, TargetNullValue=false, FallbackValue=false, Mode=OneWay}"
-                                VerticalOptions="Center">
-                                <Image HeightRequest="24" WidthRequest="24">
-                                    <Image.Source>
-                                        <matIcons:MaterialIcon Symbol="MyLocation" Color="{Binding Source={x:Reference WNowPage}, Path=ConditionPanelTextColor}" />
-                                    </Image.Source>
-                                </Image>
-                            </Border>
-                            <Label
-                                x:Name="Location"
-                                Grid.Column="1"
-                                Margin="0,0,0,4"
-                                FontAttributes="Bold"
-                                FontSize="28"
-                                HorizontalTextAlignment="Center"
-                                LineBreakMode="WordWrap"
-                                MaxLines="2"
-                                Text="{Binding Weather.Location, Mode=OneWay}"
-                                TextColor="{Binding Source={x:Reference WNowPage}, Path=ConditionPanelTextColor}"
-                                VerticalOptions="Center"
-                                VerticalTextAlignment="Center" />
-                        </Grid>
-                        <Border
-                            Grid.Row="1"
-                            Stroke="Transparent"
-                            Margin="0,0,0,4"
-                            HorizontalOptions="Center">
-                            <Label
-                                x:Name="UpdateDate"
-                                Padding="2"
-                                FontAttributes="Bold"
-                                FontSize="12"
-                                HorizontalOptions="Center"
-                                HorizontalTextAlignment="Center"
-                                Text="{Binding Weather.UpdateDate, Mode=OneWay}"
-                                TextColor="{Binding Source={x:Reference WNowPage}, Path=ConditionPanelTextColor}" />
-                        </Border>
-                        <Grid
-                            x:Name="AlertButton"
-                            Grid.Row="2"
-                            Margin="0,5,0,5"
-                            Padding="11,5,11,6"
-                            BackgroundColor="OrangeRed"
-                            HorizontalOptions="FillAndExpand"
-                            x:DataType="{x:Null}"
-                            BindingContext="{x:Bind AlertsView}"
-                            IsVisible="{Binding Alerts, Converter={StaticResource collectionBooleanConverter}}">
-                            <Grid.GestureRecognizers>
-                                <TapGestureRecognizer Tapped="AlertButton_Tapped" />
-                                <ClickGestureRecognizer Clicked="AlertButton_Clicked" />
-                            </Grid.GestureRecognizers>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="50" />
-                            </Grid.ColumnDefinitions>
-                            <Image Grid.Column="0" Margin="5,2,5,0">
-                                <Image.Source>
-                                    <matIcons:MaterialIcon Size="24" Symbol="Error" Color="White" />
-                                </Image.Source>
-                            </Image>
-                            <Label
-                                Grid.Column="1"
-                                TextColor="White"
-                                Padding="5,0"
-                                FontSize="12"
-                                Text="{x:Static res_strings:Resources.title_fragment_alerts}"
-                                VerticalOptions="Center"
-                                VerticalTextAlignment="Center" />
-                            <Image
-                                Grid.Column="2"
-                                Margin="5,0"
-                                HorizontalOptions="End"
-                                VerticalOptions="Center">
-                                <Image.Source>
-                                    <matIcons:MaterialIcon Size="24" Symbol="ChevronRight" Color="White" />
-                                </Image.Source>
-                            </Image>
-                        </Grid>
-                        <Rectangle x:Name="Spacer" Margin="8" IsVisible="{x:Bind uwpUtils:FeatureSettings.BackgroundImage and ImageData is not null, Mode=OneWay}" />
-                        <Grid
-                            x:Name="ConditionPanel"
-                            Grid.Row="4"
-                            Padding="16,0"
-                            IsVisible="{Binding Weather.Location, Mode=OneWay, Converter={StaticResource stringBooleanConverter}}"
-                            MinimumHeightRequest="108">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                            </Grid.RowDefinitions>
-                            <Label
-                                x:Name="CurTemp"
-                                Grid.Column="0"
-                                Margin="0,15"
-                                FontFamily="OpenSansLight"
-                                FontSize="84"
-                                Text="{Binding Weather.CurTemp, Mode=OneWay}"
-                                TextColor="White" />
-                            <Grid
-                                x:Name="HiLoPanel"
-                                Padding="25,0,0,0"
-                                Grid.Column="1"
-                                HeightRequest="{Binding Source={x:Reference CurTemp}, Path=Height}"
-                                HorizontalOptions="Center"
-                                VerticalOptions="Center"
-                                IsVisible="{Binding Weather.ShowHiLo}">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="*" />
-                                    <RowDefinition Height="*" />
-                                </Grid.RowDefinitions>
-                                <HorizontalStackLayout Grid.Row="0" HorizontalOptions="End" VerticalOptions="End">
-                                    <Label
-                                        FontSize="24"
-                                        HeightRequest="32"
-                                        HorizontalTextAlignment="Center"
-                                        VerticalOptions="Center"
-                                        Text="{Binding Weather.HiTemp, Mode=OneWay, TargetNullValue='&#x2022;'}"
-                                        TextColor="{Binding Source={x:Reference WNowPage}, Path=ConditionPanelTextColor}"
-                                        VerticalTextAlignment="Center" />
-                                    <localControls:IconControl
-                                        IconColor="OrangeRed"
-                                        IconProvider="wi-erik-flowers"
-                                        ShowAsMonochrome="True"
-                                        WeatherIcon="&#xf058;"
-                                        IconWidth="25"
-                                        IconHeight="25"
-                                        WidthRequest="25" />
-                                </HorizontalStackLayout>
-                                <HorizontalStackLayout Grid.Row="1" HorizontalOptions="End" VerticalOptions="Start">
-                                    <Label
-                                        FontSize="24"
-                                        HeightRequest="32"
-                                        HorizontalTextAlignment="Center"
-                                        Text="{Binding Weather.LoTemp, Mode=OneWay, TargetNullValue='&#x2022;'}"
-                                        TextColor="{Binding Source={x:Reference WNowPage}, Path=ConditionPanelTextColor}"
-                                        VerticalTextAlignment="Center" />
-                                    <localControls:IconControl
-                                        IconColor="DeepSkyBlue"
-                                        IconProvider="wi-erik-flowers"
-                                        ShowAsMonochrome="True"
-                                        WeatherIcon="&#xf044;"
-                                        IconWidth="25"
-                                        IconHeight="25"
-                                        WidthRequest="25" />
-                                </HorizontalStackLayout>
-                            </Grid>
-                            <localControls:IconControl
-                                x:Name="WeatherBox"
-                                Grid.Column="3"
-                                ForceDarkTheme="{x:Bind uwpUtils:FeatureSettings.BackgroundImage, Mode=OneWay}"
-                                HeightRequest="108"
-                                HorizontalOptions="End"
-                                VerticalOptions="Center"
-                                WeatherIcon="{Binding Weather.WeatherIcon, Mode=OneWay}"
-                                IconColor="{Binding Source={x:Reference WNowPage}, Path=ConditionPanelTextColor}"
-                                IconHeight="108"
-                                IconWidth="108"
-                                WidthRequest="108" />
-                            <Label
-                                x:Name="CurCondition"
-                                Grid.Row="1"
-                                Grid.ColumnSpan="4"
-                                Padding="5"
-                                FontSize="24"
-                                Text="{Binding Weather.CurCondition, Mode=OneWay}"
-                                TextColor="{Binding Source={x:Reference WNowPage}, Path=ConditionPanelTextColor}"/>
-                            <Label
-                                x:Name="SummaryText"
-                                Grid.Row="2"
-                                Grid.ColumnSpan="4"
-                                Margin="0,10"
-                                Padding="5"
-                                FontSize="12"
-                                IsVisible="{Binding Weather.WeatherSummary, Mode=OneWay, Converter={StaticResource stringBooleanConverter}}"
-                                LineBreakMode="WordWrap"
-                                Text="{Binding Weather.WeatherSummary, Mode=OneWay}"
-                                TextColor="{Binding Source={x:Reference WNowPage}, Path=ConditionPanelTextColor}"/>
-                            <Button
-                                x:Name="Attribution"
-                                Grid.Row="3"
-                                Grid.ColumnSpan="4"
-                                HorizontalOptions="End"
-                                Clicked="Attribution_Clicked"
-                                Margin="16,0"
-                                Padding="5"
-                                BackgroundColor="Transparent"
-                                FontSize="11"
-                                IsVisible="{Binding ImageData.OriginalLink, Mode=OneWay, Converter={StaticResource objectBooleanConverter}}"
-                                TextColor="{Binding Source={x:Reference WNowPage}, Path=ConditionPanelTextColor}"
-                                Text="{x:Bind $'{res_strings:Resources.attrib_prefix} {ImageData.ArtistName} ({ImageData.SiteName})'}"/>
-                        </Grid>
-                    </VerticalStackLayout>
-                    <Border
-                        Grid.Row="1"
-                        Padding="16,4,16,0"
-                        BackgroundColor="{DynamicResource RegionColor}"
-                        Stroke="Transparent"
-                        StrokeThickness="5">
-                        <Border.StrokeShape>
-                            <RoundRectangle CornerRadius="8,8,0,0" />
-                        </Border.StrokeShape>
-                        <VerticalStackLayout x:Name="ListLayout" />
-                    </Border>
-                </Grid>
+                <Grid x:Name="ListLayout" RowDefinitions="Auto, *" />
             </ScrollView>
         </RefreshView>
         <ActivityIndicator x:Name="ContentRing"
